--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-   
-
-    <title>Document</title>
+    <title>Meus Objetivos do Ano</title>
 </head>
 <body>
-    
+    <section class="conteudo-principal">
+        <h2 class="titulo-principal">Meus Objetivos do Ano</h2>
+        <div class="botoes">
+            <buttun class="botao">Passar na Faculdade</buttun>
+            <buttun class="botao">Aprender os Conteúdos</buttun>
+            <buttun class="botao">Ter notas boas</buttun>
+            <buttun class="botao">Continuar praticando atividades físicas</buttun>
+        </div>
+    </section>
 </body>
 </html>
