--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do Ano</h2>
         <div class="botoes">
-            <buttun class="botao">Passar na Faculdade</buttun>
-            <buttun class="botao">Aprender os Conteúdos</buttun>
-            <buttun class="botao">Ter notas boas</buttun>
-            <buttun class="botao">Continuar praticando atividades físicas</buttun>
+            <button class="botao">Passar na Faculdade</button>
+            <button class="botao">Aprender os Conteúdos</button>
+            <button class="botao">Ter notas boas</button>
+            <button class="botao">Continuar praticando atividades físicas</button>
         </div>
     </section>
 </body>
