--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do Ano_<span></span>  </h2>
+        <h2 class="titulo-principal">Meus Objetivos do Ano<span>_</span>  </h2>
         <div class="botoes">
             <button class="botao">Passar na Faculdade</button>
             <button class="botao">Aprender os Conteúdos</button>
