--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do Ano<span>_</span>  </h2>
         <div class="botoes">
-            <button class="botao">Passar na Faculdade</button>
+            <button class="botao ativo">Passar na Faculdade</button>
             <button class="botao">Aprender os Conteúdos</button>
             <button class="botao">Ter notas boas</button>
             <button class="botao">Continuar praticando atividades físicas</button>
