--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
             <button class="botao">Continuar praticando atividades físicas</button>
         </div>
     </section>
+    <script src="main.js"></script>
 </body>
 </html>
