--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             <button class="botao">Ter notas boas</button>
             <button class="botao">Continuar praticando atividades físicas</button>
         </div>
+        <div class="abas-textos"> 
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Passar em medicina na Unioeste</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Estudar esse ano para ser aprovada.</h4>
+            </div>
+        </div>
     </section>
     <script src="main.js"></script>
 </body>
