--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
                 <h3 class="aba-conteudo-titulo-principal">Passar em medicina na Unioeste</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Estudar esse ano para ser aprovada.</h4>
             </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Entender os conteúdos da escola e cursinho</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Estudar durante as tardes.</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Conseguir notas boas para ter um boletim bonito</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Ir bem nas provas esse ano</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Continuar indo na academia</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Ir na academia e fazer atividades físicas esse ano e nos próximos</h4>
+            </div>
         </div>
     </section>
     <script src="main.js"></script>
