--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button class="botao">Continuar praticando atividades físicas</button>
         </div>
         <div class="abas-textos"> 
-            <div class="aba-conteudo">
+            <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Passar em medicina na Unioeste</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Estudar esse ano para ser aprovada.</h4>
             </div>
