--- a/index.html
+++ b/index.html
@@ -19,18 +19,22 @@
             <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Passar em medicina na Unioeste</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Estudar esse ano para ser aprovada.</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Entender os conteúdos da escola e cursinho</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Estudar durante as tardes.</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Conseguir notas boas para ter um boletim bonito</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Ir bem nas provas esse ano</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Continuar indo na academia</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Ir na academia e fazer atividades físicas esse ano e nos próximos</h4>
+                <div class="contador"></div>
             </div>
         </div>
     </section>
